fixed a little ui misalignment

--- a/src/index.scss
+++ b/src/index.scss
@@ -218,7 +218,7 @@ body {
     border: solid 1px #e0e0e0;
     transition: all 0.25s ease-out;
     @extend .flex-row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     cursor: pointer;
     border-radius: 8px;
